<resources>
    <string name="app_name">Automa Pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="yen">	&#165;</string>
    <string name="menu">Menu</string>
    <string name="scan">Scan</string>
    <string name="payment">Payment</string>
    <string name="bills">Bills</string>
    <string name="history">History</string>
    <string name="promotion">Promotion</string>
    <string name="your_expenditure_for_this_month">Your Expenditure for this month</string>
    <string name="your_total_expenditure">Your Total Expenditure:</string>
    <string name="total_expenditure_for_this_month">Total Expenditure For This Month</string>
    <string name="process">Process</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="cost">Cost</string>
    <string name="scan_error">We can\'t find the bills, please scan again</string>
    <string name="scan_success">QR Code Scanned</string>
    <string name="subtitle1">Checking and paying your utility bills become much easier with this app, you can check and pay it anywhere and anytime.</string>
    <string name="subtitle2">Tracking your expenditure is not hard anymore, you can see your expenditure with ease and automatically organized</string>
    <string name="subtitle3">Pay with only one click, it’s automatically detect how much people is connected to the bills and split it evenly.</string>
    <string name="title1">Paying Bills</string>
    <string name="title2">Spending History</string>
    <string name="title3">Splitting Bills</string>
    <string name="hi_harits">Hi Harits !</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="your_expenditure_for_this_month_is">Your Expenditure for this month is</string>
    <string name="bills_no">Bills No</string>
    <string name="total">Total</string>
    <string name="customer_id">Enter your customer id</string>
    <string name="input_number">Enter payment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="place">Place</string>
    <string name="person">Person</string>
    <string name="name">Name</string>
    <string name="pay_person">Pay/Person</string>
</resources>