<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_4sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/name"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_slab_medium"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/total"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_slab_medium"/>

    <TextView
        android:id="@+id/tv_title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_slab_medium"/>

    <TextView
        android:id="@+id/tv_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_value"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_slab_medium"/>
</androidx.constraintlayout.widget.ConstraintLayout>