<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.main.MainActivity">

    <include
        android:id="@+id/dashboard"
        android:layout_width="@dimen/_294sdp"
        android:layout_height="@dimen/_204sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/dashboard_layout"
        />

    <TextView
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/dashboard"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/roboto_slab"
        android:textStyle="bold"
        android:text="@string/menu"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/secondary_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_scan"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_menu"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/scan"
        android:textSize="@dimen/_8ssp"
        android:textAllCaps="false"
        android:padding="0dp"
        app:icon="@drawable/outline_qr_code_scanner_24"
        app:iconGravity="textTop"
        app:iconSize="@dimen/_20sdp"
        app:iconPadding="@dimen/_6sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_payment"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:backgroundTint="@color/primary_dark"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_menu"
        app:layout_constraintStart_toEndOf="@id/btn_scan"
        app:layout_constraintEnd_toStartOf="@id/btn_bills"
        android:text="@string/payment"
        android:textSize="@dimen/_8ssp"
        android:textAllCaps="false"
        android:padding="0dp"
        app:icon="@drawable/outline_payments_24"
        app:iconGravity="textTop"
        app:iconSize="@dimen/_20sdp"
        app:iconPadding="@dimen/_6sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_bills"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_menu"
        app:layout_constraintStart_toEndOf="@id/btn_payment"
        app:layout_constraintEnd_toStartOf="@id/btn_history"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/bills"
        android:textSize="@dimen/_8ssp"
        android:textAllCaps="false"
        android:padding="0dp"
        app:icon="@drawable/outline_receipt_24"
        app:iconGravity="textTop"
        app:iconSize="@dimen/_20sdp"
        app:iconPadding="@dimen/_6sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_history"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_menu"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/primary_dark"
        android:text="@string/history"
        android:textSize="@dimen/_8ssp"
        android:textAllCaps="false"
        android:padding="0dp"
        app:icon="@drawable/ic_history_24"
        app:iconGravity="textTop"
        app:iconSize="@dimen/_20sdp"
        app:iconPadding="@dimen/_6sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

    <TextView
        android:id="@+id/tv_promotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_scan"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/promotion"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_13ssp"
        android:fontFamily="@font/roboto_slab"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_promotion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>