<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_293sdp"
    android:layout_height="@dimen/_185sdp"
    xmlns:tools="http://schemas.android.com/tools"
    android:backgroundTint="@color/primary_dark"
    app:cardCornerRadius="@dimen/_16sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_4sdp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/hi_harits"
            android:textColor="@color/white"
            android:textSize="@dimen/_24ssp"
            android:fontFamily="@font/roboto_slab_bold"/>

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/welcome_back"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_18ssp"
            android:fontFamily="@font/roboto_slab_medium"/>

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:text="@string/your_expenditure_for_this_month_is"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/roboto_slab_medium"/>

        <TextView
            android:id="@+id/tv_total_expenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_50ssp"
            android:fontFamily="@font/roboto_slab_bold"
            tools:text="100.000"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>