<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    tools:context=".ui.history.DetailExpenditureActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@android:color/transparent"
        app:icon="@drawable/outline_arrow_back_24"
        app:iconGravity="textTop"
        app:iconSize="@dimen/_24sdp"
        android:padding="2dp"
        app:iconPadding="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_284sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/card_wave"/>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_292sdp"
        android:layout_height="@dimen/_352sdp"
        android:layout_marginTop="@dimen/_102sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_18sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_slab_bold"
                android:textAlignment="center"
                android:maxEms="6"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="Vuitoon"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/roboto_slab_bold"
                android:textAlignment="center"
                tools:text="12/12/2021"/>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/title"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"/>

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/place"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"/>

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_place"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/cost"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"/>


            <TextView
                android:id="@+id/tv_subtitle_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"/>

            <TextView
                android:id="@+id/tv_place_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/cost"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"/>

            <TextView
                android:id="@+id/tv_cost_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_place_value"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/cost"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"/>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_137sdp"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cost"
                android:background="@color/divider"/>

            <TextView
                android:id="@+id/tv_hint_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                android:text="@string/your_expenditure_for_this_month"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"
                android:maxEms="8"
                android:textColor="@color/secondary_text"/>

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/roboto_slab_medium"
                android:maxEms="8"
                android:textColor="@color/black"
                tools:text="100.000"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>